sumo/tests/duarouter/routes/style1_input/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalpos' in definition of a vehicle is empty.
Error: Invalid arrivalpos definition for vehicle '0'
Quitting (on error).
